--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     
     <section>
-      <h2>The Characters</h2>
+      <h2>The Characters Test</h2>
 
       <article>
         <h3>Shinnosuke Nohara (Shinchan)</h3>
